PROJECT(pbtheme)
cmake_minimum_required(VERSION 2.6)

#INCLUDE(CPack)

ADD_DEFINITIONS( -DNDEBUG=1 )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long")
if (WIN32)
  ADD_DEFINITIONS( -DWIN32=1 -D_WIN32=1 -DCR_EMULATE_GETTEXT=1 -DNOMINMAX=1 -D_CRT_SECURE_NO_WARNINGS )
else()
  ADD_DEFINITIONS( -DLINUX=1 -D_LINUX=1 )
endif(WIN32)
FIND_PACKAGE(ZLIB)
